<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity_" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_weight" />

            <TextView
                android:id="@+id/txt_val_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="0.25"
                tools:ignore="HardcodedText" />

            <SeekBar
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_weight"
                android:layout_toRightOf="@+id/btn_lighter"
                android:layout_toLeftOf="@id/btn_heavier"
                android:layout_marginTop="15dp"
                android:max="100"
                android:progress="25" />

            <Button
                android:id="@+id/btn_lighter"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_weight"
                android:layout_alignParentLeft="true"
                android:text="&lt;"
                android:textColor="@color/design_default_color_background"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_heavier"
                android:layout_alignParentRight="true"
                android:layout_below="@id/txt_weight"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text="&gt;"
                android:textColor="@color/design_default_color_background"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/label_measurements">
        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:scrollbars="vertical"
            android:id="@+id/list">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/txt_val_ms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="30dp"
                    android:text="@string/label_ms" />

                <TextView
                    android:id="@+id/txt_val_fps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="30dp"
                    android:text="@string/label_fps" />

                <TextView
                    android:id="@+id/txt_val_joule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="30dp"
                    android:text="@string/label_joule" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/clear_items" />
</RelativeLayout>
